--- a/01-metadata.html
+++ b/01-metadata.html
@@ -1,1 +1,21 @@
 <!DOCTYPE html>
+<html lang="ko-KR">
+  <head>
+    <!--HTML 5 chareset 설정방식-->
+    <meta charset="UTF-8" />
+    <meta name="author" content="멋쟁이 사자처럼 - 서진만"/>
+    <meta name="keywords" content="웹표준,웹접근성,HTML5"/>
+    <meta name="description" content="'함께 성장하는 바른 교육' 이듬(EUID)'과 멋사가 만났습니다."/>
+    <!--<meta http-equiv="refresh" content="30"/>-->
+
+    <meta property="og:title" content="콘텐츠 제목" />
+    <meta property="og:url" content="웹페이지 URL" />
+    <meta property="og:type" content="웹페이지 타입(blog, website 등)" />
+    <meta property="og:image" content="표시되는 이미지" />
+    <meta property="og:title" content="웹사이트 이름" />
+    <meta property="og:description" content="웹페이지 설명" />
+  </head>
+  <body>
+    
+  </body>
+</html>
