--- a/15-iframe.html
+++ b/15-iframe.html
@@ -1,1 +1,33 @@
-<!-- HTML 코드를 작성해 주세요. -->
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>iframe 요소</title>
+</head>
+<body>
+  <h1>인라인 프레임</h1>
+  <div>
+    <iframe width="560" height="315" 
+    src="https://www.youtube.com/embed/dEsml1bNtBU" 
+    title="YouTube video player" 
+    frameborder="0" 
+    allowfullscreen></iframe>
+  </div>
+
+  <figure>
+    <div class="iframe-container iframe16">
+      <iframe class="fullsize" width="560" height="315" title="웹접근성과 웹표준 개념" frameborder="0" allowfullscreen
+        src="https://www.youtube.com/embed/fUcIe7-2zxw"></iframe>
+    </div>
+  </figure>
+
+  <!-- 두개의 동영상이 어긋나 보이는 이유 
+  위: 동영상을 퍼온것
+  아래: 복사해온것
+
+  가지고 있는 css 스타일들이 다르다 아래가 마진이 있어서 더옆으로 움직인것 
+  -->
+</body>
+</html>
