--- a/18-form.html
+++ b/18-form.html
@@ -1,1 +1,30 @@
-<!-- HTML 코드를 작성해 주세요. -->
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>폼 관련 요소 </title>
+</head>
+<body>
+  <!--web forms 2.0-->
+  <!--placeholder 입력값의 힌트-->
+  <h1> 폼 관련 요소 </h1>
+  <form action=""https://formspree.io/dirnrhd21@naver.com"" method="post" id="searchForm">
+    <fieldset>
+      <legend>검색</legend>
+      <div>
+        <!--명시적인 연결방식 for 와 id로 연결  
+          접근성을 중요시하였더니 사용성까지높아짐
+        검색어를 클릭하면 검색창으로 포커스가 넘어감-->
+        <label for="search">자료검색</label>
+        <input id="search" type="search" maxlangth="10" minlength="6" 
+        placeholder="검색어"/>
+      </div>
+    </fieldset>
+
+  </form>
+  <!-- html 5 부터 폼 밖에서도 작성가능 -->
+  <button type="submit" form="searchForm">검색</button>
+</body>
+</html>
