--- a/18-form.html
+++ b/18-form.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <!--web forms 2.0-->
-  <!--placeholder 입력값의 힌트-->
+  <!--placeholder 입력값의 힌트
+  
+  https://formspree.io/ 이메일 확인 사이트 -->
   <h1> 폼 관련 요소 </h1>
   <form action=""https://formspree.io/dirnrhd21@naver.com"" method="post" id="searchForm">
     <fieldset>
@@ -18,7 +20,7 @@
           접근성을 중요시하였더니 사용성까지높아짐
         검색어를 클릭하면 검색창으로 포커스가 넘어감-->
         <label for="search">자료검색</label>
-        <input id="search" type="search" maxlangth="10" minlength="6" 
+        <input id="search" type="search" maxlangth="10" minlength="6" name="search"
         placeholder="검색어"/>
       </div>
     </fieldset>
