--- a/19-interactive-element.html
+++ b/19-interactive-element.html
@@ -9,7 +9,7 @@
 <body>
   <!-- 다이얼로그 예시 -->
   <!--open이 있어야 화면에 표시-->
-  <!--aria-label 은 dialog에 이름표를 달아놓은것-->
+  <!--aria-label 은 dialog(대화상자)에 이름표를 달아놓은것-->
   <dialog open aria-label="가입안내">
     <p>차별화된 회원가입 혜택</p>
     <a href="/">지금 바로 만나보세요!</a>
@@ -23,7 +23,8 @@
 <!-- 상세 및 요약 정보 제공 예시 -->
 <div>
   <details open>
-    <!--<summary> 접었다가 펼치기-->
+    <!--<details> 요소는 "열림" 상태일 때만 내부 정보를 보여주는 정보 공개 위젯을 생성합니다. 
+      요약이나 레이블은 <summary> 요소를 통해 제공할 수 있습니다.-->
     <summary>국민 내일배움카드</summary>
     <figure>
       <img src="images/learn-card.png" alt="" />
